add contact section

--- a/Hockeys-B9A3/index.html
+++ b/Hockeys-B9A3/index.html
@@ -491,6 +491,15 @@
                 </div>
             </div>
         </section>
+        <!-- Contact section -->
+        <section class="py-[25px]">
+            <!-- Section title and subtitle -->
+            <div class="py-12 mt-2 border-y border-dashed border-[rgba(19, 19, 24, 0.20)]">
+                <h1 class="text-[#131318] text-[22px] text-center lg:text-4xl font-extrabold mb-3">Get In Touch</h1>
+                <p class="text-[14px] text-center lg:text-base text-[rgba(19, 19, 24, 0.60)] font-semibold px-10">This is batch nine. There are 48k heros. All heros are heros. You can meet all our heros.</p>
+            </div>
+            <!-- Section content -->
+        </section>
     </main>
     <!-- Footer section -->
     <footer class="">
