bug fix and update FAQ section section

--- a/Hockeys-B9A3/index.html
+++ b/Hockeys-B9A3/index.html
@@ -417,11 +417,11 @@
             </div>
             <!-- Section content -->
             <div class="pt-[50px]">
-                <div class="p-5 flex flex-col lg:flex-row lg:justify-center border border-1 border-[rgba(19, 19, 24, 0.10)] rounded-lg">
+                <div class="p-5 w-full flex flex-col gap-5 lg:grid grid-cols-3 lg:gap-5 border border-1 border-[rgba(19, 19, 24, 0.10)] rounded-lg">
                     <!-- FAQ photo -->
-                    <img src="./assets/Images/11.png" class="w-full lg:w-[440px] lg:h-[470px] mb-5 lg:mr-5 rounded-lg">
+                    <img src="./assets/Images/11.png" class="w-full rounded-lg">
                     <!-- FAQ container -->
-                    <div class="flex flex-col justify-center">
+                    <div class="flex flex-col justify-center lg:col-span-2">
                         <!-- FAQ 1 -->
                         <div class="collapse collapse-plus bg-white">
                             <input type="radio" name="my-accordion-3" checked="checked" /> 
