complete contact section

--- a/Hockeys-B9A3/index.html
+++ b/Hockeys-B9A3/index.html
@@ -499,6 +499,69 @@
                 <p class="text-[14px] text-center lg:text-base text-[rgba(19, 19, 24, 0.60)] font-semibold px-10">This is batch nine. There are 48k heros. All heros are heros. You can meet all our heros.</p>
             </div>
             <!-- Section content -->
+            <div class="pt-[50px] w-full grid grid-cols-1 lg:grid-cols-3 gap-5">
+                <!-- Info -->
+                <div class="p-5 flex flex-col gap-5 border border-1 border-grey-400 rounded-xl">
+                    <div class="p-6 bg-green-50 rounded-xl">
+                        <img src="./assets/Images/call.png" class="mb-5">
+                        <p class="text-gray-400 text-base">Phone Number</p>
+                        <h3 class="text-[#131318] text-[18px] font-extrabold">(+62) 123-321-543</h3>
+                    </div>
+                    <div class="p-6 bg-red-50 rounded-xl">
+                        <img src="./assets/Images/message.png" class="mb-5">
+                        <p class="text-gray-400 text-base">Email</p>
+                        <h3 class="text-[#131318] text-[18px] font-extrabold">hockeys@support.com</h3>
+                    </div>
+                    <div class="p-6 bg-blue-50 rounded-xl">
+                        <img src="./assets/Images/location.png" class="mb-5">
+                        <p class="text-gray-400 text-base">Location</p>
+                        <h3 class="text-[#131318] text-[18px] font-extrabold">152/1 Mohakhali Wireless Gate</h3>
+                    </div>
+                </div>
+                <!-- Form -->
+                <div class="lg:col-span-2">
+                    <form class="grid grid-cols-1 lg:grid-cols-2 gap-5" action="#">
+                        <label class="form-control w-full">
+                            <div class="label">
+                              <span class="label-text text-[#131318] text-lg font-bold">Your name</span>
+                            </div>
+                            <input type="text" placeholder="Enter your full name" class="input bg-gray-100 w-full" />
+                        </label>
+                        <label class="form-control w-full">
+                            <div class="label">
+                              <span class="label-text text-[#131318] text-lg font-bold">Your Email</span>
+                            </div>
+                            <input type="email" placeholder="Enter your email" class="input bg-gray-100 w-full" />
+                        </label>
+                        <label class="form-control w-full">
+                            <div class="label">
+                              <span class="label-text text-[#131318] text-lg font-bold">Subject</span>
+                            </div>
+                            <input type="text" placeholder="Enter your subject" class="input bg-gray-100 w-full" />
+                        </label>
+                        <label class="form-control w-full">
+                            <div class="label">
+                              <span class="label-text text-[#131318] text-lg font-bold">Phone Number</span>
+                            </div>
+                            <input type="text" placeholder="Enter your phone number" class="input bg-gray-100 w-full" />
+                        </label>
+                        <label class="form-control w-full lg:col-span-2">
+                            <div class="label">
+                              <span class="label-text text-[#131318] text-lg font-bold">Message</span>
+                            </div>
+                            <textarea class="textarea textarea-lg bg-gray-100 h-[150px] lg:h-[220px]" placeholder="Write your message"></textarea>
+                        </label>
+                        <button type="submit" class="btn border-none bg-[#FF4240] hover:bg-red-600 text-white text-lg font-bold lg:col-span-2 mt-5">Send Message</button>
+                    </form>
+                </div>
+                <!-- Social icons -->
+                <div class="">
+                    <h3 class="text-[#131318] text-xl font-extrabold">Social Media</h3>
+                    <div class="">
+                        
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Footer section -->
