--- a/Hockeys-B9A3/index.html
+++ b/Hockeys-B9A3/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockeys - B9A3</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -555,10 +556,13 @@
                     </form>
                 </div>
                 <!-- Social icons -->
-                <div class="">
+                <div class="w-full p-[35px] mt-[25px] bg-gray-100 rounded-lg flex flex-col gap-3 justify-center items-center lg:col-span-3">
                     <h3 class="text-[#131318] text-xl font-extrabold">Social Media</h3>
-                    <div class="">
-                        
+                    <div class="flex gap-5">
+                        <a href="#" class="text-2xl hover:text-[#FF4240]"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#" class="text-2xl hover:text-[#FF4240]"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="text-2xl hover:text-[#FF4240]"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="text-2xl hover:text-[#FF4240]"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
             </div>
