--- a/Hockeys-B9A3/index.html
+++ b/Hockeys-B9A3/index.html
@@ -569,8 +569,53 @@
         </section>
     </main>
     <!-- Footer section -->
-    <footer class="">
-
+    <footer class="bg-[#131318] lg:py-14">
+        <!-- Footer content -->
+        <div class="container mx-auto px-5">
+            <div class="grid lg:grid-cols-4 gap-10 lg:gap-5 p-10">
+                <aside class="flex flex-col items-center text-center lg:text-left lg:items-start">
+                    <a href="#">
+                        <h1 class="text-white text-2xl font-extrabold">HOCKEY<span class="text-[#FF4240]">'</span>S</h1>
+                    </a>
+                    <p class="text-gray-400 text-base font-medium mt-2 mb-5">This is batch nine. There are 48k heros. All heros are heros. You can meet all our heros.</p>
+                    <div class="flex flex-col gap-2">
+                        <div class="flex gap-3 items-center text-gray-400">
+                            <i class="fa-regular fa-envelope text-[#FF4240]"></i>
+                            <a href="mailto:hockeys@support.com">hockeys@support.com</a>
+                        </div>
+                        <div class="flex gap-3 items-center text-gray-400">
+                            <i class="fa-solid fa-phone text-[#FF4240]"></i>
+                            <a href="tel:(+62) 123-321-543">(+62) 123-321-543</a>
+                        </div>
+                    </div>
+                </aside> 
+                <div class="lg:col-span-2 grid grid-cols-2">
+                    <nav class="flex flex-col gap-2 justify-start items-center">
+                        <header class="text-white text-lg font-bold mb-3">Company</header> 
+                        <a class="link link-hover text-gray-500">About us</a>
+                        <a class="link link-hover text-gray-500">Leadership</a>
+                        <a class="link link-hover text-gray-500">Careers</a>
+                        <a class="link link-hover text-gray-500">News & Article</a>
+                        <a class="link link-hover text-gray-500">Legal Notice</a>
+                    </nav> 
+                    <nav class="flex flex-col gap-2 justify-start items-center">
+                        <header class="text-white text-lg font-bold mb-3">Support</header> 
+                        <a class="link link-hover text-gray-500">Help Center</a>
+                        <a class="link link-hover text-gray-500">FAQ</a>
+                        <a class="link link-hover text-gray-500">Ticket Support</a>
+                        <a class="link link-hover text-gray-500">Contact Us</a>
+                    </nav>
+                </div> 
+                <nav class="flex flex-col gap-2 justify-start items-center">
+                  <header class="text-white text-lg font-bold mb-3">Services</header> 
+                  <a class="link link-hover text-gray-500">Academy</a>
+                  <a class="link link-hover text-gray-500">Group Lesson</a>
+                  <a class="link link-hover text-gray-500">Private Lesson</a>
+                  <a class="link link-hover text-gray-500">Hockeys for kids</a>
+                  <a class="link link-hover text-gray-500">Hockeys for Adult</a>
+                </nav>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
