complete project and some bugs fix

--- a/Hockeys-B9A3/index.html
+++ b/Hockeys-B9A3/index.html
@@ -572,7 +572,7 @@
     <footer class="bg-[#131318] lg:py-14">
         <!-- Footer content -->
         <div class="container mx-auto px-5">
-            <div class="grid lg:grid-cols-4 gap-10 lg:gap-5 p-10">
+            <div class="grid lg:grid-cols-4 gap-10 lg:gap-5 px-5 py-10 lg:p-10">
                 <aside class="flex flex-col items-center text-center lg:text-left lg:items-start">
                     <a href="#">
                         <h1 class="text-white text-2xl font-extrabold">HOCKEY<span class="text-[#FF4240]">'</span>S</h1>
@@ -589,7 +589,7 @@
                         </div>
                     </div>
                 </aside> 
-                <div class="lg:col-span-2 grid grid-cols-2">
+                <div class="w-full lg:col-span-2 grid grid-cols-2 gap-4">
                     <nav class="flex flex-col gap-2 justify-start items-center">
                         <header class="text-white text-lg font-bold mb-3">Company</header> 
                         <a class="link link-hover text-gray-500">About us</a>
